added :: sharing options, q/ans exchange with googleAppEngine,topnews section and ui improvements

--- a/res/layout/mypaperinstruct.xml
+++ b/res/layout/mypaperinstruct.xml
@@ -7,7 +7,7 @@
     tools:ignore="HardcodedText,DuplicateIds" >
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
@@ -15,13 +15,22 @@
         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:text="Instructions for the filter"
+            android:layout_height="40dp"
+            android:textStyle="bold"
+            android:text="Instructions for the filter\n\n"
             android:textAppearance="?android:attr/textAppearanceLarge" />
+        
+               <TextView
+                   android:id="@+id/textView1"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:text="1.Choose whether you want to add a politician or a party from the first drop down list.\n\n 2. Then choose the corresponding party/politician from the second drop down list.\n\n 3. Click on &apos;Add to My Subscriptions&apos; to add it your paper.\n\n 4. Click on &apos;View my Subscriptions&apos; to view your subscribed politicians/papers.\n "
+                   android:textStyle="italic" />
+        
     </LinearLayout>
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
@@ -29,18 +38,18 @@
         <Spinner
             android:id="@+id/spinner1"
             android:layout_width="168dp"
-            android:layout_height="106dp"
+            android:layout_height="wrap_content"
             android:entries="@array/filter1"
             android:prompt="@string/filter1_prompt" />
 
         <Spinner
             android:id="@+id/spinner2"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
@@ -59,7 +68,7 @@
     </LinearLayout>
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+  
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
