--- a/res/layout/news_page.xml
+++ b/res/layout/news_page.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <Button
+        android:id="@+id/share_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:text="Share"/>
+
     <WebView
         android:id="@+id/wvBrow"
         android:layout_width="match_parent"
